# rdf4h

./: .boring  .editorconfig  .gitignore  .hlint.yaml  .travis.yml  AvlGraph.hs  AvlGraph_Test.hs  FglGraph.hs  GraphTestUtils.hs  Interact.hs  LICENSE.txt  MGraph.hs  MGraph_Test.hs  Makefile  NTriples.hs  NTriplesMain.hs  NTriplesParser.hs  NTriplesParserMain.hs  Namespace.hs  ParserUtils.hs  RDF.hs  README.md  Rdf4hMain.hs  Rdf4hParseMain.hs  Rdf4hQueryMain.hs  Setup.hs  TODO.org  TriplesGraph.hs  TriplesGraph_Test.hs  TurtleParser.hs  TurtleParserMain.hs  TurtleParser_ConformanceTest.hs  Utils.hs  debug.sh  make-www.sh  quickcheck  rdf4h.cabal  shell.nix  stack.yaml  weeder.dhall
Text/RDF/: Core.hs  FglGraph.hs  GraphTestUtils.hs  MGraph.hs  MGraph_Test.hs  NTriplesParser.hs  NTriplesSerializer.hs  Namespace.hs  ParserUtils.hs  TriplesGraph.hs  TriplesGraph_Test.hs  TurtleParser.hs  TurtleParser_ConformanceTest.hs  TurtleSerializer.hs  Utils.hs
Text/RDF/RDF4H/: Core.hs  FglGraph.hs  GraphTestUtils.hs  Interact.hs  MGraph.hs  MGraph_Test.hs  NTriplesParser.hs  NTriplesSerializer.hs  Namespace.hs  ParserUtils.hs  TriplesGraph.hs  TriplesGraph_Test.hs  TurtleParser.hs  TurtleParser_ConformanceTest.hs  TurtleSerializer.hs  Utils.hs
bench/: MainCriterion.hs
benchmark-results/: criterion-results-28.12.2015.txt  criterion-results-30.12.2015.txt  rdf4h-bench-12092016.html
data/: all-fawlty-towers.nt
data/cwm-example-1/: green.n3  red.n3
data/gedcom/: Makefile  gedcom-damlex.n3  gedcom-facts.n3  gedcom-query.n3  gedcom-relations.n3  lots.n3  readme
data/nt/: langlit-test.nt
data/ttl/: example1.out  example10.out  example10.ttl  example11.out  example11.ttl  example12.out  example12.ttl  example13.out  example13.ttl  example3.out  example3.ttl  example4.out  example4.ttl  example5.out  example5.ttl  example6.out  example6.ttl  example7.out  example7.ttl  example8.out  example8.ttl  example9.out  example9.ttl  fawlty1.out  fawlty1.ttl  side-by-side.txt  test.ttl  test.url
data/ttl/conformance/: bad-15.ttl  test-00.out  test-07.out  test-29.out  test-29.ttl
data/w3c/rdf-mt/: ._manifest.ttl  manifest.ttl
data/w3c/rdf-xml/: ._manifest.ttl
data/w3c/rdf-xml/rdfms-xml-literal-namespaces/: ._test001.rdf  ._test002.rdf
data/w3c/turtle/TurtleTests/: turtle-subm-14.ttl  turtle-syntax-blank-label.ttl  turtle-syntax-number-10.ttl  turtle-syntax-prefix-05.ttl  turtle-syntax-string-09.ttl
data/xml/: example07.rdf  example21.nt  example21.rdf  example22.out  example22.rdf
docs/: _config.yml  index.md  rdf-bench-04102016.html  rdf4h-bench-13112016.html  style.scss
examples/: BuildRDFGraph.hs  ESWC.hs  ParseURLs.hs
resources/: dcterms.ttl  foaf.ttl  owl.ttl  rdf.ttl  rdfs.ttl  shacl.ttl  vann.ttl  xsd.ttl
src/: Rdf4hParseMain.hs  Rdf4hQueryMain.hs
src/Data/: RDF.hs
src/Data/RDF/: BlankNode.hs  FglGraph.hs  IRI.hs  MGraph.hs  Namespace.hs  PatriciaTreeGraph.hs  Query.hs  State.hs  TriplesGraph.hs  Types.hs  Utils.hs
src/Data/RDF/Graph/: AdjHashMap.hs  AlgebraicGraph.hs  HashMapS.hs  HashMapSP.hs  IndexedS.hs  MGraph.hs  MapSP.hs  PatriciaTreeGraph.hs  TList.hs  TPatriciaTree.hs  TriplesGraph.hs  TriplesList.hs  TriplesPatriciaTree.hs
src/Data/RDF/Vocabulary/: DCTerms.hs  FOAF.hs  OWL.hs  RDF.hs  RDFS.hs  SHACL.hs  SKOS.hs  Utils.hs  VANN.hs  XSD.hs
src/Data/RDF/Vocabulary/Generator/: VocabularyGenerator.hs
src/Text/RDF/: TurtleParser.hs.~0~
src/Text/RDF/RDF4H/: Interact.hs  NTriplesParser.hs  NTriplesSerializer.hs  ParserUtils.hs  TurtleParser.hs  TurtleSerializer.hs  XmlParser.hs  XmlParserHXT.hs  XmlParserXmlbf.hs
src/Text/RDF/RDF4H/TurtleSerializer/: Internal.hs
src/Text/RDF/RDF4H/XmlParser/: Identifiers.hs  Utils.hs  Xeno.hs  Xmlbf.hs
testsuite/tests/: Test.hs
testsuite/tests/Data/RDF/: BlankNodeTests.hs  GraphImplTests.hs  GraphTestUtils.hs  IRITests.hs  MGraph_Test.hs  PatriciaTreeGraph_Test.hs  PropertyTests.hs  TriplesGraph_Test.hs  TurtleSerializerTest.hs
testsuite/tests/Data/RDF/Graph/: AdjHashMap_Test.hs  HashMapSP_Test.hs  HashMapS_Test.hs  HashSP_Test.hs  HashS_Test.hs  IndexedS_Test.hs  MapSP_Test.hs  SP_Test.hs  TList_Test.hs  TriplesList_Test.hs  TriplesPatriciaTree_Test.hs
testsuite/tests/Text/RDF/RDF4H/: QuickCheck.hs  TurtleParser_ConformanceTest.hs  TurtleSerializerTest.hs  XmlParser_Test.hs
testsuite/tests/Text/RDF/RDF4H/data/: common-subject.ttl
testsuite/tests/W3C/: Manifest.hs  NTripleTest.hs  RdfXmlTest.hs  TurtleTest.hs  W3CAssertions.hs
www/: index.html  index.xhtml
