name:            rdf4h
version:         3.1.0
synopsis:        A library for RDF processing in Haskell
description:
  'RDF for Haskell' is a library for working with RDF in Haskell.
  At present it includes parsers and serializers for RDF in the N-Triples
  and Turtle, and parsing support for RDF/XML. It provides abilities such as querying
  for triples  containing a particular subject, predicate, or object, or
  selecting triples that satisfy an arbitrary predicate function.

author:          Rob Stewart, Pierre Le Marre, Slava Kravchenko, Calvin Smith
copyright:       (c) Rob Stewart, Pierre Le Marre, Slava Kravchenko, Calvin Smith
maintainer:      Rob Stewart <robstewart57@gmail.com>
homepage:        https://github.com/robstewart57/rdf4h
bug-reports:     https://github.com/robstewart57/rdf4h/issues
license:         BSD3
license-file:    LICENSE.txt
cabal-version:   >= 1.8
build-type:      Simple
category:        RDF
stability:       Experimental
tested-with:     GHC==7.10.2, GHC==8.0.2
extra-tmp-files: test
extra-source-files: examples/ParseURLs.hs
                  , examples/ESWC.hs

library
  exposed-modules: Data.RDF
                 , Data.RDF.IRI
                 , Data.RDF.Namespace
                 , Data.RDF.Types
                 , Data.RDF.Query
                 , Data.RDF.Graph.AdjHashMap
                 , Data.RDF.Graph.TList
                 , Text.RDF.RDF4H.TurtleParser
                 , Text.RDF.RDF4H.TurtleSerializer
                 , Text.RDF.RDF4H.NTriplesParser
                 , Text.RDF.RDF4H.NTriplesSerializer
                 , Text.RDF.RDF4H.XmlParser
                 , Text.RDF.RDF4H.ParserUtils
  build-depends:   attoparsec
                 , base >= 4.8.0.0
                 , bytestring
                 , filepath
                 , containers
                 , parsec >= 3
                 , HTTP >= 4000.0.0
                 , hxt >= 9.3.1.2
                 , text >= 1.2.1.0
                 , unordered-containers
                 , hashable
                 , deepseq
                 , binary
                 , hgal
                 , parsers
                 , mtl
                 , network-uri >= 2.6
  if impl(ghc < 7.6)
    build-depends: ghc-prim
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*

  hs-source-dirs:  src
  ghc-options:     -Wall -funbox-strict-fields

executable rdf4h
  main-is:         src/Rdf4hParseMain.hs
  build-depends:   base >= 4.8.0.0 && < 6
                 , rdf4h
                 , containers
                 , text >= 1.2.1.0

  if impl(ghc < 7.6)
    build-depends: ghc-prim

  ghc-options:   -Wall -funbox-strict-fields

test-suite test-rdf4h
  type:          exitcode-stdio-1.0
  main-is:       Test.hs
  other-modules: Data.RDF.PropertyTests
                 Data.RDF.GraphImplTests
                 Data.RDF.IRITests
                 Text.RDF.RDF4H.TurtleParser_ConformanceTest
                 Text.RDF.RDF4H.XmlParser_Test
                 W3C.Manifest
                 W3C.NTripleTest
                 W3C.RdfXmlTest
                 W3C.W3CAssertions
  ghc-options:   -Wall -fno-warn-orphans -funbox-strict-fields
  build-depends: base >= 4.8.0.0 && < 6
               , rdf4h
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , QuickCheck >= 1.2.0.0
               , HUnit >= 1.2.2.1
               , containers
               , text >= 1.2.1.0
               , filepath
               , directory
               , safe

  if impl(ghc < 7.6)
    build-depends: ghc-prim

  other-modules: W3C.TurtleTest
  hs-source-dirs: testsuite/tests

benchmark rdf4h-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          MainCriterion.hs
  build-depends:    base >= 4.8.0.0,
                    deepseq,
                    criterion,
                    rdf4h,
                    text >= 1.2.1.0
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/robstewart57/rdf4h.git
