name:            rdf4h
version:         4.0.2
synopsis:        A library for RDF processing in Haskell
description:
  'RDF for Haskell' is a library for working with RDF in Haskell.
  It includes RDF parsers and serializers for N-Triples
  and Turtle, and an RDF parser for RDF/XML. It provides the ability to query
  for triples containing a particular subject, predicate, or object, or
  selecting triples that satisfy an arbitrary predicate function. It
  also supports IRI parsing and resolution.

author:          Rob Stewart, Pierre Le Marre, Slava Kravchenko, Calvin Smith
copyright:       (c) Rob Stewart, Pierre Le Marre, Slava Kravchenko, Calvin Smith, Renzo Carbonara
maintainer:      Rob Stewart <robstewart57@gmail.com>
homepage:        https://github.com/robstewart57/rdf4h
bug-reports:     https://github.com/robstewart57/rdf4h/issues
license:         BSD3
license-file:    LICENSE.txt
cabal-version:   >= 1.10
build-type:      Simple
category:        RDF
stability:       stable
tested-with:     GHC==8.0.2, GHC==8.2.2, GHC==8.4.3, GHC==8.6.5, GHC==8.8.3
extra-tmp-files: test
extra-source-files: examples/ParseURLs.hs
                  , examples/ESWC.hs
                  , examples/BuildRDFGraph.hs

source-repository head
  type:     git
  location: https://github.com/robstewart57/rdf4h.git

library
  default-language: Haskell2010
  hs-source-dirs:  src
  exposed-modules: Data.RDF
                 , Data.RDF.IRI
                 , Data.RDF.Namespace
                 , Data.RDF.Types
                 , Data.RDF.Query
                 , Data.RDF.Graph.AdjHashMap
                 , Data.RDF.Graph.AlgebraicGraph
                 , Data.RDF.Graph.TList
                 , Text.RDF.RDF4H.TurtleParser
                 , Text.RDF.RDF4H.TurtleSerializer
                 , Text.RDF.RDF4H.NTriplesParser
                 , Text.RDF.RDF4H.NTriplesSerializer
                 , Text.RDF.RDF4H.XmlParser
                 , Text.RDF.RDF4H.XmlParser.Identifiers
                 , Text.RDF.RDF4H.ParserUtils
  build-depends:   attoparsec
                 , base >= 4.8.0.0
                 , bytestring
                 , filepath
                 , containers
                 , parsec >= 3
                 -- , HTTP >= 4000.0.0
                 -- , hxt >= 9.3.1.2
                 , text >= 1.2.1.0
                 , algebraic-graphs >= 0.5
                 , unordered-containers >= 0.2.10.0
                 , hashable
                 , deepseq
                 , binary
                 , parsers
                 , mtl
                 , network-uri >= 2.6
                 -- , xmlbf >= 0.6
                 -- , xmlbf-xeno
                 , lifted-base
                 , http-conduit >= 2.2.0
                 , mmorph
                 , exceptions
                 , selective
                 , html-entities
                 , xeno
  other-modules:   Text.RDF.RDF4H.XmlParser.Xmlbf
                 , Text.RDF.RDF4H.XmlParser.Xeno
  if impl(ghc < 7.6)
    build-depends: ghc-prim
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*

  ghc-options:     -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

executable rdf4h
  default-language: Haskell2010
  main-is:         src/Rdf4hParseMain.hs
  build-depends:   base >= 4.8.0.0 && < 6
                 , rdf4h
                 , containers
                 , text >= 1.2.1.0

  if impl(ghc < 7.6)
    build-depends: ghc-prim

  ghc-options:   -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

test-suite test-rdf4h
  default-language: Haskell2010
  type:          exitcode-stdio-1.0
  main-is:       Test.hs
  hs-source-dirs: testsuite/tests
  other-modules: Data.RDF.PropertyTests
                 Data.RDF.GraphImplTests
                 Data.RDF.IRITests
                 Text.RDF.RDF4H.TurtleParser_ConformanceTest
                 Text.RDF.RDF4H.XmlParser_Test
                 W3C.Manifest
                 W3C.NTripleTest
                 W3C.TurtleTest
                 W3C.RdfXmlTest
                 W3C.W3CAssertions
  build-depends: base >= 4.8.0.0 && < 6
               , rdf4h
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , QuickCheck >= 1.2.0.0
               , HUnit >= 1.2.2.1
               , containers
               , text >= 1.2.1.0
               , filepath
               , directory
               , safe

  if impl(ghc < 7.6)
    build-depends: ghc-prim
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*

  ghc-options:   -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

benchmark rdf4h-bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          MainCriterion.hs
  build-depends:    base >= 4.8.0.0,
                    deepseq,
                    criterion,
                    rdf4h,
                    text >= 1.2.1.0

  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*

  ghc-options:   -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
